Resolves: tdf#124319 crash on restoring redline SfxChildWin

Change-Id: I585ce6403e256652ebfc0ccb8ba25daa9c3e34e8